; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/ui/extr_browser.c___ui_browser__show_title.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/ui/extr_browser.c___ui_browser__show_title.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_browser = type { i64 }

@NEWT_COLORSET_ROOT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__ui_browser__show_title(%struct.ui_browser* %0, i8* %1) #0 {
  %3 = alloca %struct.ui_browser*, align 8
  %4 = alloca i8*, align 8
  store %struct.ui_browser* %0, %struct.ui_browser** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = call i32 @SLsmg_gotorc(i32 0, i32 0)
  %6 = load %struct.ui_browser*, %struct.ui_browser** %3, align 8
  %7 = load i32, i32* @NEWT_COLORSET_ROOT, align 4
  %8 = call i32 @ui_browser__set_color(%struct.ui_browser* %6, i32 %7)
  %9 = load i8*, i8** %4, align 8
  %10 = load %struct.ui_browser*, %struct.ui_browser** %3, align 8
  %11 = getelementptr inbounds %struct.ui_browser, %struct.ui_browser* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = add nsw i64 %12, 1
  %14 = call i32 @slsmg_write_nstring(i8* %9, i64 %13)
  ret void
}

declare dso_local i32 @SLsmg_gotorc(i32, i32) #1

declare dso_local i32 @ui_browser__set_color(%struct.ui_browser*, i32) #1

declare dso_local i32 @slsmg_write_nstring(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
